fixed nz menu items vertical spacing

--- a/client/src/app/features/navigation/top-nav.component.scss
+++ b/client/src/app/features/navigation/top-nav.component.scss
@@ -157,12 +157,12 @@
 ::ng-deep .ant-dropdown-menu-item {
   color: var(--color-text) !important;
   background: var(--color-bg-navbar) !important;
-  padding: 0.5rem 1rem !important;
+  padding: 0.75rem 1rem !important;
   display: flex !important;
   align-items: center !important;
   gap: 0.5rem !important;
   border-radius: 4px !important;
-  margin: 0 0.25rem !important;
+  margin: 0.25rem 0.25rem !important;
   transition: all 0.1s ease !important;
   
   &:hover {
